# Toy-Scheme

./: .gitignore  AUTHORS  CMakeLists.txt  COMPILE  INSTALL  LICENSE  README.md  TEST  main.c
examples/meta-scheme/: README.md  demo.scm  meta-interpreter.scm
examples/ml-linear-regression/: README.md  linear_regression.scm
examples/sql-engine/: README.md  demo.scm  run_demo.sh  sql_engine.scm
examples/sql-engine/data/: employees.csv
scripts/: build.sh  install.sh  test.sh
src/: apply.c  builtin.c  environment.c  error.c  eval.c  object.c  read.c  write.c
src/header/: apply.h  builtin.h  environment.h  error.h  eval.h  object.h  read.h  write.h
tests/: README.md
tests/cases/: 01_arithmetic_compare.scm  02_forms_scope.scm  03_list_types_convert.scm  04_parser_edges.scm  05_comments.scm  06_error_recovery.scm  07_load_letstar_letrec_quote.scm  08_primitive_validation_tco.scm  09_unclosed_list_error.scm  10_variadic_lambda_and_arity.scm  11_core_scheme_features.scm  12_ports_io.scm  13_sql_engine.scm  14_string_readline.scm
tests/expected/: 01_arithmetic_compare.txt  02_forms_scope.txt  03_list_types_convert.txt  04_parser_edges.txt  06_error_recovery.txt  07_load_letstar_letrec_quote.txt  08_primitive_validation_tco.txt  09_unclosed_list_error.txt  10_variadic_lambda_and_arity.txt  11_core_scheme_features.txt  12_ports_io.txt  13_sql_engine.txt  14_string_readline.txt
tests/fixtures/: load_target.scm
tests/repl/: 01_multiline.in  02_error_recovery.in
tests/repl-expected/: 02_error_recovery.txt
